--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 /* Reset básico */
-body, h1, input, button {
+body,
+h1,
+input,
+button {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
@@ -17,7 +20,7 @@ body {
 }
 
 /* Contêiner do formulário */
-.login-container {
+.container {
     background: white;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
@@ -27,11 +30,13 @@ body {
 }
 
 /* Estilização do formulário */
-.login-form h1 {
+.login-form h1,
+.cadastroForm h1 {
     text-align: center;
     margin-bottom: 20px;
     font-size: 24px;
 }
+
 
 /* Campos do formulário */
 .form-group {
@@ -69,4 +74,3 @@ input {
     font-family: monospace;
     font-size: 16px;
 }
-
